Fix logo spacing, add new font and move css

--- a/resources/sass/components/_3_mega-site-navigation.scss
+++ b/resources/sass/components/_3_mega-site-navigation.scss
@@ -41,16 +41,6 @@ Usage: codyhouse.co/license
     justify-content: space-between;
 }
 
-// logo
-
-.logo {
-    font-family: 'Montserrat Subrayada', sans-serif;
-    font-size: 30px;
-    color: alpha(var(--color-contrast-lower), var(--color-o, 1));
-}
-
-
-
 // mobile buttons
 .mega-nav__icon-btns {
     display: flex;
